--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -31,6 +31,7 @@
   "types": "./lib/react-app.d.ts",
   "dependencies": {
     "@babel/core": "7.1.0",
+    "@babel/register": "^7.0.0",
     "@svgr/webpack": "2.4.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
