--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -57,6 +57,7 @@
     "fs-extra": "7.0.0",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
+    "ignore-styles": "^5.0.1",
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
